syntax = "proto3";

package fogata;

import "koinos/options.proto"; 

message stake_args {
   bytes account = 1 [(koinos.btype) = ADDRESS];
   uint64 koin_amount = 2 [jstype = JS_STRING];
   uint64 vhp_amount = 3 [jstype = JS_STRING];
}

message stake_event {
   bytes account = 1 [(koinos.btype) = ADDRESS];
   uint64 koin_amount = 2 [jstype = JS_STRING];
   uint64 vhp_amount = 3 [jstype = JS_STRING];
   uint64 stake = 4 [jstype = JS_STRING];
}

message snapshot_stake {
   uint64 stake = 1 [jstype = JS_STRING];
   uint64 current_snapshot = 2 [jstype = JS_STRING];
   uint64 koin_withdrawn = 3 [jstype = JS_STRING];
   uint64 vapor_withdrawn = 4 [jstype = JS_STRING];
}

message balance {
   uint64 koin_amount = 1 [jstype = JS_STRING];
   uint64 vhp_amount = 2 [jstype = JS_STRING];
   uint64 vapor_amount = 3 [jstype = JS_STRING];
}

message koin_account {
   bytes account = 1 [(koinos.btype) = ADDRESS];
   uint64 koin_amount = 2 [jstype = JS_STRING];
}

message collect_koin_preferences {
   bytes account = 1 [(koinos.btype) = ADDRESS];
   oneof preference {
      uint64 percentage_koin = 2; // percentage with 3 decimals (1000 => 1%)
      uint64 all_after_virtual = 3;
   }
}

enum allowance_type {
   UNDEFINED = 0;
   TRANSFER_KOIN = 1;
   BURN_KOIN = 2;
}

message allowance {
  allowance_type type = 1;
  uint64 koin_amount = 2 [jstype = JS_STRING];
  bytes account = 3 [(koinos.btype) = ADDRESS];
}

message beneficiary {
   bytes address = 1 [(koinos.btype) = ADDRESS];
   uint32 percentage = 2; // all percentages use 3 decimals (1000 => 1%)
}

message pool_params {
   string name = 1;
   string image = 2;
   string description = 3;
   repeated beneficiary beneficiaries = 4;
   uint64 payment_period = 5 [jstype = JS_STRING]; // time in milliseconds
}

message pool_state {
   uint64 stake = 1 [jstype = JS_STRING];
   uint64 virtual = 2 [jstype = JS_STRING]; // total virtual balance (koin + vhp)
   uint64 snapshot_stake = 3 [jstype = JS_STRING];
   uint64 snapshot_koin = 4 [jstype = JS_STRING];
   uint64 current_snapshot = 5 [jstype = JS_STRING];
   uint64 next_snapshot = 6 [jstype = JS_STRING];
   uint64 koin_withdrawn = 7 [jstype = JS_STRING];
   uint64 snapshot_vapor = 8 [jstype = JS_STRING];
   uint64 vapor_withdrawn = 9 [jstype = JS_STRING];
}